--- a/templates/components/_productCard.twig
+++ b/templates/components/_productCard.twig
@@ -1,12 +1,12 @@
 {% set products = craft.entries.section('product').all() %}
 
+
 <section>
     <div class="gallery">
         {% for product in products %}
             <div class="product">
-                <img src="{{ product.productImage }}" alt="{{ product.title }}">
+                <img src="{{ product.productimage }}" alt={{ product.title }}>
                 <h1>{{ product.title }}</h1>
-                <p>{{ product.productPrice }}</p>
             </div>
         {% endfor %}
     </div>
