--- a/templates/components/_productCard.twig
+++ b/templates/components/_productCard.twig
@@ -1,4 +1,7 @@
 {% set products = craft.entries.section('product').limit(3) %}
+<head>
+{% do craft.app.view.registerCssFile('@web/styles.css') %}
+
 
 <section>
     <div class="gallery">
@@ -12,3 +15,4 @@
         {% endfor %}
     </div>
 </section>
+</head>
