--- a/templates/components/_productCard.twig
+++ b/templates/components/_productCard.twig
@@ -1,18 +1,35 @@
 {% set products = craft.entries.section('product').limit(3) %}
+<!DOCTYPE html>
+<html lang="en">
 <head>
-{% do craft.app.view.registerCssFile('@web/styles.css') %}
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page Name</title>
+    {% do craft.app.view.registerCssFile('@web/css/styles.css') %}
+</head>
+<body>
 <section>
     <div class="gallery">
         {% for product in products %}
             {% set image = product.productimage.one() %}
-            <div class="product">
-                <img src="{{image.url}}" alt="{{ product.title }}">
-                <h1>{{ product.title }}</h1>
-{#                <p>{{ product.productStock }}</p>#}
+            <div class="single-card">
+                <div class="product">
+                    <div class="img-area">
+                        <img src="{{ image.url }}" alt="{{ product.title }}">
+                    </div>
+                    <div class="overlay">
+                        <button class="add-to-cart">Add to cart</button>
+                        <button class="view-details">View details</button>
+                    </div>
+                    <div class="info">
+                        <h3>{{ product.title }}</h3>
+                        <p class="price">$300</p>
+                        <p class="description">Blah blah</p>
+                    </div>
+                </div>
             </div>
         {% endfor %}
     </div>
 </section>
-</head>
+</body>
+</html>
