--- a/templates/components/_productCard.twig
+++ b/templates/components/_productCard.twig
@@ -1,4 +1,4 @@
-{% set products = craft.entries.section('product').limit(3) %}
+{% set products = craft.entries.section('product').limit(6) %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,8 +23,8 @@
                     </div>
                     <div class="info">
                         <h3>{{ product.title }}</h3>
-                        <p class="price">$300</p>
-                        <p class="description">Blah blah</p>
+                        <p class="price">${{ product.productpricetag }}</p>
+                        <p class="description">{{ product.productdescription }}</p>
                     </div>
                 </div>
             </div>
