--- a/templates/components/_productCard.twig
+++ b/templates/components/_productCard.twig
@@ -1,10 +1,10 @@
-{% set products = craft.entries.section('product').limit(6) %}
+{% set products = craft.entries.section('product').limit(3) %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Name</title>
+    <title>Producten</title>
     {% do craft.app.view.registerCssFile('@web/css/styles.css') %}
 </head>
 <body>
