--- a/templates/components/_navbar.twig
+++ b/templates/components/_navbar.twig
@@ -14,6 +14,7 @@
         </div>
         <nav class="navbar">
             <a href="../overzichtpagina.twig">All products</a>
+            <a href="../contactpagina.twig">Contact</a>
         </nav>
     </header>
 </section>
