--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,13 +1,10 @@
-body {
-    background-color: #f0f0f0; /* Test to see if CSS is applied */
-}
-
-.gallery {
+.wrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
     margin: 6% auto 0;
+    font-family: 'Bebas Neue', sans-serif;
 }
 
 .single-card {
@@ -25,16 +22,11 @@ body {
     transform: translateY(-10px);
 }
 
-.product {
+.img-area {
     position: relative;
     width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-.img-area {
-    width: 100%;
     height: 200px;
+    overflow: hidden;
 }
 
 .img-area img {
@@ -58,7 +50,7 @@ body {
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color: rgba(91, 149, 212, 0.8);
+    background-color: #5b95d4;
     opacity: 0;
     transition: opacity 0.3s ease;
 }
@@ -85,6 +77,7 @@ body {
 .add-to-cart:hover, .view-details:hover {
     background-color: #c76744;
     color: #F2F2F2;
+    border: none;
 }
 
 .info {
@@ -100,15 +93,9 @@ body {
     font-family: 'Bebas Neue', sans-serif;
 }
 
-.info p {
-    font-family: 'Bebas Neue', sans-serif;
-}
-
 .info .price {
     margin: 0;
     font-size: 30px;
     color: #5b95d4;
     padding-bottom: 10px;
-    font-family: 'Bebas Neue', sans-serif;
 }
-
