adding hardcoded content

--- a/templates/components/_bannerHomepage.twig
+++ b/templates/components/_bannerHomepage.twig
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Producten</title>
+    {% do craft.app.view.registerCssFile('@web/css/BannerHome.css') %}
+</head>
+<section>
+    <div class="bg-image">
+        <div class="filter-blur">
 
+        </div>
+    </div>
+    <div  class="banner">
+        <h1>Time to brighten your wrist <br>with high-tech watches...</h1>
+    </div>
+
+    <main>
+        <h2>What's HOT right now?</h2>
+    </main>
+
+</section>
+</html>
