--- a/templates/components/_footer.twig
+++ b/templates/components/_footer.twig
@@ -10,10 +10,10 @@
 <section>
     <footer>
         <div class="footer-content">
-            <h3>Timecraft</h3>
-            <p>timecraft@info.com</p>
-            <p>016 32 43 54</p>
-            <p class="bottom-text">Gelatineboulevard 186, 3500 Hasselt, Belgium</p>
+            <h3>{{ footer.websitetitle }}</h3>
+            <p>{{ footer.websitemail }}</p>
+            <p>{{ footer.websitephone }}</p>
+            <p class="bottom-text">{{ footer.websitelocation }}</p>
         </div>
     </footer>
 </section>
