--- a/templates/components/_navbar.twig
+++ b/templates/components/_navbar.twig
@@ -10,11 +10,11 @@
 <section>
     <header class="header">
         <div class="logo">
-            <a href="../homepage.twig">Timecraft</a>
+            <a href="../homepage.twig">{{ navbar.websitename }}</a>
         </div>
         <nav class="navbar">
-            <a href="../overzichtpagina.twig">All products</a>
-            <a href="../contactpagina.twig">Contact</a>
+            <a href="../overzichtpagina.twig">{{ navbar.websiteallproducts }}</a>
+            <a href="../contactpagina.twig">{{ navbar.websitecontact }}</a>
         </nav>
     </header>
 </section>
