--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -1,1 +1,24 @@
-{% do craft.app.view.registerCssFile('@web/styles.css') %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+</head>
+<body>
+<header>
+    {% include "components/_navbar.twig" %}
+</header>
+
+<main>
+    {% block content %}
+
+    {% endblock %}
+</main>
+
+<footer>
+    {% include "components/_footer.twig" %}
+</footer>
+
+</body>
+</html>
