--- a/templates/components/_productCard.twig
+++ b/templates/components/_productCard.twig
@@ -1,4 +1,4 @@
-{% set products = craft.entries.section('product').limit(3) %}
+{% set products = craft.entries.section('product').orderBy("RAND()").limit(3).all() %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
