adding hardcoded content

--- a/templates/components/_bannerHomepage.twig
+++ b/templates/components/_bannerHomepage.twig
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div  class="banner">
-            <h1>{{ homePageEntry.bannertext }}</h1>
+            <h1 class="backdrop">{{ homePageEntry.bannertext }}</h1>
         </div>
         <main>
             <h2>{{ homePageEntry.whatshottitle}}</h2>
