Home done? overzicht done? nav hardcoded footer is done

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,7 +1,7 @@
-{% extends "_layout.twig" %}
+{#{% extends "_layout.twig" %}#}
 
 {% block content %}
 
-    {% include "components/_bannerHomepage.twig" %}
+    {% include "homepage.twig" %}
 
 {% endblock %}
