--- a/templates/components/_productCard.twig
+++ b/templates/components/_productCard.twig
@@ -15,7 +15,7 @@
                 </div>
                 <div class="info">
                     <h3>{{ product.title }}</h3>
-                    <p class="price">{{ product.productpricetag }}</p>
+                    <p class="price">${{ product.productpricetag }}</p>
                     <p class="description">{{ product.productdescription }}</p>
                 </div>
             </div>
