Navbar zou in orde moeten zijn buiten de CSS

--- a/templates/components/_navbar.twig
+++ b/templates/components/_navbar.twig
@@ -1,53 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar</title>
+
+{% block content %}
+    {%  set navMain = craft.navigate.raw('navbar') %}
+
     {% do craft.app.view.registerCssFile('@web/css/Nav.css') %}
-</head>
-<body>
-<section>
-    <header class="header">
-        <div class="logo">
-            <a href="../homepage.twig">{{ navbar.websitename }}</a>
-        </div>
-        <nav class="navbar">
-            <a href="../overzichtpagina.twig">{{ navbar.websiteallproducts }}</a>
-            <a href="../contactpagina.twig">{{ navbar.websitecontact }}</a>
-        </nav>
-    </header>
-</section>
-</body>
-</html>
+    <body>
+    <section>
+            <header class="header">
+                <nav class="navbar">
+                    {%  for node in navMain %}
+                    <ul>
+                        <li>
+                            <a href="{{ node.url }}">{{ node.name }}</a>
+                        </li>
+                    </ul>{% endfor %}
+                </nav>
+            </header>
+    </section>
+    </body>
+{% endblock %}
 
-
-{#{% block content %}#}
-
-{#    {%  set navMain = craft.navigate.raw('navigation') %}#}
-{#    <!DOCTYPE html>#}
-{#    <html lang="en">#}
-{#    <head>#}
-{#        <meta charset="UTF-8">#}
-{#        <meta name="viewport" content="width=device-width, initial-scale=1.0">#}
-{#        <title>Navbar</title>#}
-{#        {% do craft.app.view.registerCssFile('@web/css/Nav.css') %}#}
-{#    </head>#}
-{#    <body>#}
-{#    <section>#}
-{#        {%  for node in navMain %}#}
-{#            <header class="header">#}
-{#                <div class="logo">#}
-{#                    <a href="{{ node.url }}">{{ node.name }}</a>#}
-{#                </div>#}
-{#                <nav class="navbar">#}
-{#                    <a href="{{ node.url }}">{{ node.name }}</a>#}
-{#                    <a href="{{ node.url }}">{{ node.name }}</a>#}
-{#                </nav>#}
-{#            </header>#}
-{#        {% endfor %}#}
-{#    </section>#}
-{#    </body>#}
-{#    </html>#}
-
-{#{% endblock %}#}
