overzichtpagina moet alleen nog css

--- a/templates/components/_overzichtpagina.twig
+++ b/templates/components/_overzichtpagina.twig
@@ -21,8 +21,8 @@
 <body>
 <section>
     <div class="introductie">
-        <h1 class="titeloverzicht">Timecraft</h1>
-        <p class="omschrijvingoverzicht">Experience the art of innovation and craftsmanship in every watch we create. Our timepieces are meticulously handcrafted, fusing cutting-edge technology with timeless design. Each watch is a testament to dedication and expertise, reflecting sophistication and individuality.</p>
+        <h1 class="titeloverzicht">{{ allProducts.introtitle }}</h1>
+        <p class="omschrijvingoverzicht">{{ allProducts.descriptionintrotitle }}</p>
     </div>
     <form method="get">
         <div class="filters">
