--- a/templates/contactpagina.twig
+++ b/templates/contactpagina.twig
@@ -1,3 +1,3 @@
 {% extends "_layout.twig" %}
-
+{% do craft.app.view.registerCssFile('@web/css/general.css') %}
 {% include "components/_contactForm" %}
