--- a/templates/overzichtpagina.twig
+++ b/templates/overzichtpagina.twig
@@ -1,5 +1,5 @@
 {% extends "_layout.twig" %}
-
+{% do craft.app.view.registerCssFile('@web/css/general.css') %}
 {% block content %}
 
 {% include "components/_overzichtpagina.twig" %}
