--- a/web/css/overzichtstyles.css
+++ b/web/css/overzichtstyles.css
@@ -2,6 +2,11 @@ body {
     margin: 0;
     background-color: #f5f5f5;
 }
+.introductie {
+    font-family: 'Bebas Neue', sans-serif;
+    text-align: left;
+    margin: 200px 100px 0 100px;
+}
 
 .filters, .pagination {
     display: flex;
