--- a/web/css/overzichtstyles.css
+++ b/web/css/overzichtstyles.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     background-color: #f5f5f5;
 }
+
 .introductie {
     font-family: 'Bebas Neue', sans-serif;
     text-align: left;
@@ -34,8 +35,9 @@ body {
     color: #F2F2F2;
 }
 
-.filters .button-active, .pagination .button-active {
+.pagination .button.active {
     background-color: #c76744;
+    color: #F2F2F2;
 }
 
 .wrapper {
