--- a/templates/contactpagina.twig
+++ b/templates/contactpagina.twig
@@ -1,6 +1,7 @@
 {% extends "_layout.twig" %}
 {% do craft.app.view.registerCssFile('@web/css/general.css') %}
 {% do craft.app.view.registerCssFile('@web/css/contact.css') %}
+{% hook 'after-body-start' %}
 
 {% block content %}
 
