--- a/templates/overzichtpagina.twig
+++ b/templates/overzichtpagina.twig
@@ -1,5 +1,6 @@
 {% extends "_layout.twig" %}
 {% do craft.app.view.registerCssFile('@web/css/general.css') %}
+{% hook 'after-body-start' %}
 {% block content %}
 
 {% include "components/_overzichtpagina.twig" %}
