--- a/web/css/overzichtstyles.css
+++ b/web/css/overzichtstyles.css
@@ -114,6 +114,7 @@ body {
     border: none;
     transition: background-color 0.3s ease, color 0.3s ease;
     margin-bottom: 10px;
+    text-decoration: none;
 }
 
 .add-to-cart:hover, .view-details:hover {
