trying to understand/fix content blocks

--- a/templates/contentmanagerpage.twig
+++ b/templates/contentmanagerpage.twig
@@ -1,9 +1,14 @@
 {% extends "_layout.twig" %}
 {% hook 'after-body-start' %}
 
+{% set blocks = entry.blockbuilder.all() %}
+
 {% block content %}
 
+<div>
+    <div>
 
-
+    </div>
+</div>
 
 {% endblock %}
