--- a/templates/contentmanagerpage.twig
+++ b/templates/contentmanagerpage.twig
@@ -1,14 +1,14 @@
 {% extends "_layout.twig" %}
 {% hook 'after-body-start' %}
 
-{% set blocks = entry.blockbuilder.all() %}
+{% set blocks = entry.pagebuilder.all() %}
 
 {% block content %}
-
+{% for block in blocks %}
 <div>
     <div>
-
+        {% include  'components/_' ~ block.type.handle %}
     </div>
 </div>
-
+{% endfor %}
 {% endblock %}
