some stuff fixed

--- a/templates/components/_navbar.twig
+++ b/templates/components/_navbar.twig
@@ -6,6 +6,9 @@
 
     <section>
             <header class="header">
+                <div class="logo">
+                    <h1>Timecraft</h1>
+                </div>
                 <nav class="navbar">
                     {%  for node in navMain %}
                     <ul>
