--- a/web/css/contact.css
+++ b/web/css/contact.css
@@ -2,7 +2,30 @@ body {
     margin: 0;
     background-color: #f5f5f5;
 }
-section {
-    margin: 100px 100px 100px 100px;
 
+.contact-section {
+    display: flex;
+    justify-content: center;
+    padding: 150px;
+    font-family: 'Bebas Neue', sans-serif;
 }
+
+.contact-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1200px; /* Adjust the max-width as needed */
+}
+
+.contact-info, .contact-form {
+    flex: 1;
+    margin: 10px;
+}
+
+.contact-info {
+    /* Additional styling for contact-info */
+}
+
+.contact-form {
+}
+
