proberen opmaak form

--- a/templates/contentmanagerpage.twig
+++ b/templates/contentmanagerpage.twig
@@ -1,5 +1,6 @@
 {% extends "_layout.twig" %}
 {% hook 'after-body-start' %}
+{% do craft.app.view.registerCssFile('@web/css/managerpage.css') %}
 
 {% set blocks = entry.pagebuilder.all() %}
 
